# tutorial-cmake

./: .gitignore  README.md
01_hello_world/: CMakeLists.txt  README.md
02_project_template/: README.md
02_project_template/src/: main.cpp
03_project_install/: CMakeLists.txt
04_gen_static_dynamic_lib/: README.md
04_gen_static_dynamic_lib/lib/: CMakeLists.txt  hello.cpp  hello.h
05_include_external/src/: CMakeLists.txt  main.cpp
